<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gas Finder</string>
    <string name="hello_world">Hello world!</string>

    <!-- Strings for the menu -->
    <string name="action_settings">Settings</string>
    <string name="action_download">Download more stations</string>
    <string name="action_distance">Station with closest distance</string>
    <string name="action_time">Station with shortest time</string>
    <string name="action_about">About</string>
    
    <!-- Strings for the about part -->
    <string name="about_btn_close">Close</string>
    <string name="about_title">Information about the app</string>
    <string name="about_content">
        This app is for you who might need to find gas stations (both natural gas and
        regular gas and diesel) in Sweden.
        \nTo navigate to a gas station, simply click on the marker you want to navigate to.
        \nYou can download KML-files and install them for the app by clicking Download.
        Note that the KML-files must contain a Placemark-tag with name-tag and Point-tag.
        \nThe best way to ensure valid KML-files is to use the site from Download.
        \nYou can also get a navigation to the closest stations by either distance or traveling time.
    </string>
    
    <!-- Rest... -->
    <string name="disconnected_error">Location client dropped out. Sorry.</string>
    <string name="no_connection_error">Location service can\'t be connected to.</string>
    <string name="no_markers_found">There are no stations on the map, add stations in settings.</string>

</resources>