<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="sjosten.android.gasfinder.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_download"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_download"/>
    <item
        android:id="@+id/action_distance"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_distance"/>
    <item
        android:id="@+id/action_time"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_time"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_about"/>

</menu>